--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,19 +91,10 @@ NewWindowHeight=1136
 NewWindowPosition=(X=612,Y=34)
 
 [EditorStartup]
-LastLevel=/Game/Maps/M_Loading1
+LastLevel=/Game/Maps/Waterfall/Waterfall_9
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Widgets/InfinityMode/W_InfinityInterface.W_InfinityInterface
-OpenAssetsAtExit=/Game/Blueprints/Widgets/StandartMode/W_Interface.W_Interface
-OpenAssetsAtExit=/Game/Blueprints/Widgets/MenuHUD.MenuHUD
-OpenAssetsAtExit=/Game/Blueprints/Widgets/Loading/W_TransitionWidget.W_TransitionWidget
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_3.BP_MenuBG_3
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_4.BP_MenuBG_4
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1
-OpenAssetsAtExit=/Game/Blueprints/BP_GameInstance.BP_GameInstance
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_2.BP_MenuBG_2
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=363.000
@@ -1376,6 +1367,13 @@ W_Interface_C.Behavior=True
 W_Interface_C.Render Transform=True
 W_Interface_C.Clipping=True
 W_Interface_C.Navigation=True
+BP_Background_4_C.TransformCommon=True
+BP_Turret_Medium_C.TransformCommon=True
+BP_Turret_Medium_C.Turret Settings=True
+BP_Turret_Medium_C.Rendering=True
+BP_Turret_Medium_C.Replication=True
+BP_Turret_Medium_C.Input=True
+BP_Turret_Medium_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1400,8 +1398,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.PostProcess.PostProcessSettings.FilmWhitePoint\" \"Object.PostProcess.PostProcessSettings.FilmShadowTint\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerRed\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerGreen\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerBlue\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
-ActorComponent="\"Object.PostProcess.PostProcessSettings.FilmWhitePoint\" \"Object.PostProcess.PostProcessSettings.FilmShadowTint\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerRed\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerGreen\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerBlue\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
+SceneComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings.FilmWhitePoint\" \"Object.PostProcess.PostProcessSettings.FilmShadowTint\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerRed\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerGreen\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerBlue\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
 BP_Character_Main_C=
 PaperCharacter=
@@ -1528,7 +1526,7 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/LevelStuff
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Interactables
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -2281,18 +2279,18 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/M_Menu
-MRUItem1=/Game/Maps/M_Loading1
-MRUItem2=/Game/Maps/Lake/Lake_32
-MRUItem3=/Game/Maps/Waterfall/Waterfall_3
-MRUItem4=/Game/Maps/Waterfall/Waterfall_32
-MRUItem5=/Game/Maps/Waterfall/Waterfall_4
-MRUItem6=/Game/Maps/Waterfall/Waterfall_1
-MRUItem7=/Game/Maps/NightForest/NightForest_1
-MRUItem8=/Game/Maps/NightForest/NightForest_3
-MRUItem9=/Game/Maps/NightForest/NightForest_2
-MRUItem10=/Game/Maps/NightForest_2
-MRUItem11=/Game/Maps/NightForest_1
+MRUItem0=/Game/Maps/Waterfall/Waterfall_9
+MRUItem1=/Game/Maps/Waterfall/Waterfall_8
+MRUItem2=/Game/Maps/Waterfall/Waterfall_7
+MRUItem3=/Game/Maps/Waterfall/Waterfall_6
+MRUItem4=/Game/Maps/Waterfall/Waterfall_5
+MRUItem5=/Game/Maps/Waterfall/Waterfall_3
+MRUItem6=/Game/Maps/Waterfall/Waterfall_4
+MRUItem7=/Game/Maps/M_Menu
+MRUItem8=/Game/Maps/M_Loading1
+MRUItem9=/Game/Maps/Lake/Lake_32
+MRUItem10=/Game/Maps/Waterfall/Waterfall_32
+MRUItem11=/Game/Maps/Waterfall/Waterfall_1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2381,26 +2379,26 @@ UdpMessagingSettings=MoviePlayerSettings.Movies.StartupMovies,
 WmfMediaSettings=MoviePlayerSettings.Movies.StartupMovies,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBgSpawner.BP_MenuBgSpawner;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Easy.BP_Turret_Easy;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Extreme.BP_Turret_Extreme;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Medium.BP_Turret_Medium;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatformWithChildCircle.BP_MovingPlatformWithChildCircle;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal.BP_Portal;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Medium.BP_Turret_Medium;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal.BP_Portal;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CircleWithChildCircle.BP_CircleWithChildCircle;
+RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBgSpawner.BP_MenuBgSpawner;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Extreme.BP_Turret_Extreme;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big.BP_SecretChamber_Big;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_RotatBuff.BP_RotatBuff;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small.BP_SecretChamber_Small;
-RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
