Fixed all interactables bugs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,10 +12,10 @@ PreferredLandscapeOrientation=LandscapeLeft
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_2DSideScrollerBP",NewGameName="/Script/MyProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/MyProject")
-TinyFontName=/Game/2DSideScroller/Materials/Cartwheel_Font.Cartwheel_Font
-SmallFontName=/Game/2DSideScroller/Materials/Cartwheel_Font.Cartwheel_Font
-MediumFontName=/Game/2DSideScroller/Materials/Cartwheel_Font.Cartwheel_Font
-LargeFontName=/Game/2DSideScroller/Materials/Cartwheel_Font.Cartwheel_Font
+TinyFontName=/Engine/EngineFonts/TinyFont.TinyFont
+SmallFontName=/Engine/EditorResources/SmallFont.SmallFont
+MediumFontName=/Engine/EngineFonts/Roboto.Roboto
+LargeFontName=/Engine/VREditor/Fonts/VRText_RobotoLarge.VRText_RobotoLarge
 bUseFixedFrameRate=False
 FixedFrameRate=60.000000
 DefaultTimecodeFrameRate=(Numerator=30,Denominator=1)
@@ -125,6 +125,9 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bEnableGooglePlaySupport=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
