Screen Size is now being set while game starts

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -24,7 +24,7 @@ bEnableColorizedEditorTabs=True
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowWidth=640
 NewWindowHeight=1000
-NewWindowPosition=(X=635,Y=23)
+NewWindowPosition=(X=660,Y=40)
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -114,16 +114,16 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [MRU]
 MRUItem0=/Game/Maps/MagicWoods/MagicWoods_1
 MRUItem1=/Game/Maps/SunsetBeach/SunsetBeach_16
-MRUItem2=/Game/Maps/SunsetBeach/SunsetBeach_1
-MRUItem3=/Game/Maps/Waterfall/Waterfall_32
-MRUItem4=/Game/Maps/Waterfall/Waterfall_12
-MRUItem5=/Game/Maps/Waterfall/Waterfall_11
-MRUItem6=/Game/Maps/Waterfall/Waterfall_10
-MRUItem7=/Game/Maps/Waterfall/Waterfall_9
-MRUItem8=/Game/Maps/Waterfall/Waterfall_8
-MRUItem9=/Game/Maps/Waterfall/Waterfall_7
-MRUItem10=/Game/Maps/Waterfall/Waterfall_6
-MRUItem11=/Game/Maps/Waterfall/Waterfall_5
+MRUItem2=/Game/Maps/M_Loading1
+MRUItem3=/Game/Maps/SunsetBeach/SunsetBeach_1
+MRUItem4=/Game/Maps/Waterfall/Waterfall_32
+MRUItem5=/Game/Maps/Waterfall/Waterfall_12
+MRUItem6=/Game/Maps/Waterfall/Waterfall_11
+MRUItem7=/Game/Maps/Waterfall/Waterfall_10
+MRUItem8=/Game/Maps/Waterfall/Waterfall_9
+MRUItem9=/Game/Maps/Waterfall/Waterfall_8
+MRUItem10=/Game/Maps/Waterfall/Waterfall_7
+MRUItem11=/Game/Maps/Waterfall/Waterfall_6
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -140,7 +140,7 @@ User Created=False
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Interactables
+ContentBrowserTab1.SelectedPaths=/Game/Maps/MagicWoods
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -167,11 +167,12 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/Maps/MagicWoods/MagicWoods_1
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/GlobalFunctions.GlobalFunctions
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/Menu/W_Menu.W_Menu
 OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background.BP_Background
-OpenAssetsAtExit=/Game/Blueprints/E_Season.E_Season
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1
+OpenAssetsAtExit=/Game/Blueprints/Widgets/Loading/W_LoadingWidget.W_LoadingWidget
+OpenAssetsAtExit=/Game/Blueprints/BP_GameInstance.BP_GameInstance
+OpenAssetsAtExit=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton.W_SeasonButton
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -843,16 +844,17 @@ BP_MenuBG_1_C.Rendering=True
 BP_MenuBG_1_C.Replication=True
 BP_MenuBG_1_C.Input=True
 BP_MenuBG_1_C.Actor=True
+BP_GameInstance_C.Default=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.PinOptions.PinNames\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 Border="\"Object.Appearance.Background\" "
 ContentWidget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
 PanelWidget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Widget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Visual="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Widget=
+Visual=
 SizeBox=
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
@@ -867,8 +869,8 @@ ActorComponent=
 BP_Background_C=
 K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
-K2Node="\"Object.PinOptions.PinNames\" "
-EdGraphNode="\"Object.PinOptions.PinNames\" "
+K2Node=
+EdGraphNode=
 
 [UMGEditor.Designer]
 PreviewWidth=640
@@ -881,25 +883,25 @@ bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/MagicWoods/MagicWoods_1
-MRUItem1=/Game/Blueprints/Backgrounds/BP_MenuBG_1
-MRUItem2=/Game/Maps/SunsetBeach/SunsetBeach_16
-MRUItem3=/Game/Maps/SunsetBeach/SunsetBeach_1
-MRUItem4=/Game/Blueprints/E_Season
-MRUItem5=/Game/Blueprints/GlobalFunctions
-MRUItem6=/Game/Assets/Textures/game_background_5/layers/sun_Sprite
-MRUItem7=/Game/Maps/Waterfall/Waterfall_32
-MRUItem8=/Game/Maps/Waterfall/Waterfall_12
-MRUItem9=/Game/Maps/Waterfall/Waterfall_11
-MRUItem10=/Game/Maps/Waterfall/Waterfall_10
-MRUItem11=/Game/Maps/Waterfall/Waterfall_9
-MRUItem12=/Game/Maps/Waterfall/Waterfall_8
-MRUItem13=/Game/Maps/Waterfall/Waterfall_7
-MRUItem14=/Game/Maps/Waterfall/Waterfall_6
-MRUItem15=/Game/Maps/Waterfall/Waterfall_5
-MRUItem16=/Game/Maps/Waterfall/Waterfall_4
-MRUItem17=/Game/Maps/Waterfall/Waterfall_3
-MRUItem18=/Game/Maps/Waterfall/Waterfall_2
-MRUItem19=/Game/Maps/Waterfall/Waterfall_1
+MRUItem1=/Game/Maps/SunsetBeach/SunsetBeach_16
+MRUItem2=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton
+MRUItem3=/Game/Blueprints/Widgets/Menu/W_Menu
+MRUItem4=/Game/Blueprints/Widgets/Loading/W_LoadingWidget
+MRUItem5=/Game/Maps/M_Loading1
+MRUItem6=/Game/Blueprints/BP_GameInstance
+MRUItem7=/Game/Blueprints/Backgrounds/BP_MenuBG_1
+MRUItem8=/Game/Maps/SunsetBeach/SunsetBeach_1
+MRUItem9=/Game/Blueprints/E_Season
+MRUItem10=/Game/Blueprints/GlobalFunctions
+MRUItem11=/Game/Assets/Textures/game_background_5/layers/sun_Sprite
+MRUItem12=/Game/Maps/Waterfall/Waterfall_32
+MRUItem13=/Game/Maps/Waterfall/Waterfall_12
+MRUItem14=/Game/Maps/Waterfall/Waterfall_11
+MRUItem15=/Game/Maps/Waterfall/Waterfall_10
+MRUItem16=/Game/Maps/Waterfall/Waterfall_9
+MRUItem17=/Game/Maps/Waterfall/Waterfall_8
+MRUItem18=/Game/Maps/Waterfall/Waterfall_7
+MRUItem19=/Game/Maps/Waterfall/Waterfall_6
 
 [MessageLog]
 LastLogListing=PIE
@@ -1000,6 +1002,8 @@ EdGraph.Graph=False
 /Game/Blueprints/LevelStuff/BP_Platform.BP_Platform=1
 /Game/Blueprints/Backgrounds/BP_Background.BP_Background=1
 /Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3=1
+/Game/Blueprints/E_Season.E_Season=1
+/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1=1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1068,7 +1072,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
-ScreenPosition=X=545.000 Y=47.000
+ScreenPosition=X=187.000 Y=96.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1746,6 +1750,8 @@ IntProperty=ArrayProperty.DefaultValueCategory.None,
 ByteProperty=ArrayProperty.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,
 BoolProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+W_Menu_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+W_SeasonButton_C=ArrayProperty.DefaultValueCategory.None,
 
 [PathColor]
 /Game/Assets=(R=0.007552,G=0.000000,B=0.500000,A=1.000000)
