Some changes, testing ue4 Source Control

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=9823990F4A68DDF5AF2FE487047D7313
+ProjectID=0A505D24474D48206892408F7EDDC13D
 ProjectName=Block Roller 2D
 bAllowMaximize=False
 bAllowMinimize=False
@@ -8,16 +8,20 @@ CompanyName=ONU Games
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "54A6E1DC4AEAAD7467A7B0B94CCE88A9", "Block Roller 2D")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "20F837E8410FDBD8288EF7A7661ED5D1", "Block Roller 2D")
 bShouldWindowPreserveAspectRatio=False
-ProjectVersion=0.7.1
+ProjectVersion=0.3.1
 CompanyDistinguishedName=PJTeam
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 StagingDirectory=(Path="C:/Users/LeaveMyYard/Desktop/Block Roller Builds/Block Roller Teaser")
-BuildConfiguration=PPBC_ShippingClient
-FullRebuild=False
+BuildConfiguration=PPBC_Development
+FullRebuild=True
 ForDistribution=False
 UsePakFile=False
 
 [/Script/MoviePlayer.MoviePlayerSettings]
-bWaitForMoviesToComplete=False
-bMoviesAreSkippable=False
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=True
++StartupMovies=unreal engine 4 intro
++StartupMovies=Gamecube memes
+
+
