Added icon and Intro(Meme, just for betatest)

--- a/Saved/Config/Windows/Game.ini
+++ b/Saved/Config/Windows/Game.ini
@@ -1,4 +1,5 @@
 [/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="C:/Users/LeaveMyYard/Desktop/Block Roller Builds")
 Build=IfProjectHasCode
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
