Fixed all bugs with Backgrounds, now there is only 1 loading level, fixed money from stars bug, added seasons lock before some amount of stars collected

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,7 @@ bSupportsLandscapeLeftOrientation=False
 bSupportsLandscapeRightOrientation=False
 bSupportsUpsideDownOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
+FrameRateLock=PUFRL_60
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_2DSideScrollerBP",NewGameName="/Script/MyProject")
