--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,134 +1,8 @@
-[URL]
-GameName=MyProject
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_9
-bSupportsPortraitOrientation=True
-bSupportsLandscapeLeftOrientation=False
-bSupportsLandscapeRightOrientation=False
-bSupportsUpsideDownOrientation=True
+bSupportsUpsideDownOrientation=False
+bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
-FrameRateLock=PUFRL_60
-
-[/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_2DSideScrollerBP",NewGameName="/Script/MyProject")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/MyProject")
-TinyFontName=/Engine/EngineFonts/TinyFont.TinyFont
-SmallFontName=/Engine/EditorResources/SmallFont.SmallFont
-MediumFontName=/Engine/EngineFonts/Roboto.Roboto
-LargeFontName=/Engine/VREditor/Fonts/VRText_RobotoLarge.VRText_RobotoLarge
-bUseFixedFrameRate=False
-FixedFrameRate=60.000000
-DefaultTimecodeFrameRate=(Numerator=30,Denominator=1)
-MinDesiredFrameRate=60.000000
-
-[/Script/Engine.RendererSettings]
-r.MobileHDR=False
-r.Mobile.DisableVertexFog=True
-r.Shadow.CSM.MaxMobileCascades=2
-r.MobileMSAA=1
-r.DiscardUnusedQuality=False
-r.AllowOcclusionQueries=True
-r.MinScreenRadiusForLights=0.030000
-r.MinScreenRadiusForDepthPrepass=0.030000
-r.MinScreenRadiusForCSMDepth=0.010000
-r.PrecomputedVisibilityWarning=False
-r.TextureStreaming=True
-Compat.UseDXT5NormalMaps=False
-r.ClearCoatNormal=False
-r.ReflectionCaptureResolution=128
-r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
-r.ForwardShading=False
-r.VertexFoggingForOpaque=True
-r.AllowStaticLighting=True
-r.NormalMapsForStaticLighting=False
-r.GenerateMeshDistanceFields=False
-r.DistanceFieldBuild.EightBit=False
-r.GenerateLandscapeGIData=False
-r.DistanceFieldBuild.Compress=False
-r.TessellationAdaptivePixelsPerTriangle=48.000000
-r.SeparateTranslucency=False
-r.TranslucentSortPolicy=0
-TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
-r.CustomDepth=1
-r.CustomDepthTemporalAAJitter=True
-r.PostProcessing.PropagateAlpha=0
-r.UsePreExposure=False
-r.DefaultFeature.Bloom=False
-r.DefaultFeature.AmbientOcclusion=False
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=False
-r.DefaultFeature.AutoExposure.Method=0
-r.DefaultFeature.MotionBlur=False
-r.DefaultFeature.LensFlare=False
-r.TemporalAA.Upsampling=False
-r.DefaultFeature.AntiAliasing=0
-r.DefaultFeature.PointLightUnits=1
-r.DefaultFeature.SpotLightUnits=1
-r.Shadow.UnbuiltPreviewInGame=True
-r.StencilForLODDither=False
-r.EarlyZPass=3
-r.EarlyZPassMovable=True
-r.EarlyZPassOnlyMaterialMasking=False
-r.DBuffer=True
-r.ClearSceneMethod=1
-r.BasePassOutputsVelocity=False
-r.SelectiveBasePassOutputs=False
-bDefaultParticleCutouts=False
-r.AllowGlobalClipPlane=False
-r.GBufferFormat=1
-r.MorphTarget.Mode=True
-bGPUParticlesLocalVFOnly=False
-r.GPUCrashDebugging=True
-vr.InstancedStereo=False
-vr.MultiView=False
-vr.MobileMultiView=False
-vr.MobileMultiView.Direct=False
-vr.MonoscopicFarField=False
-vr.DebugCanvasInLayer=False
-r.WireframeCullThreshold=5.000000
-r.SupportStationarySkylight=True
-r.SupportLowQualityLightmaps=True
-r.SupportPointLightWholeSceneShadows=True
-r.SupportAtmosphericFog=True
-r.SkinCache.CompileShaders=False
-r.Mobile.EnableStaticAndCSMShadowReceivers=True
-r.Mobile.EnableMovableLightCSMShaderCulling=True
-r.Mobile.AllowDistanceFieldShadows=True
-r.Mobile.AllowMovableDirectionalLights=True
-r.MobileNumDynamicPointLights=4
-r.MobileDynamicPointLightsUseStaticBranch=True
-r.SkinCache.SceneMemoryLimitInMB=128.000000
-r.GPUSkin.Limit2BoneInfluences=False
-r.SupportDepthOnlyIndexBuffers=True
-r.SupportReversedIndexBuffers=True
-r.SupportMaterialLayers=False
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/M_Loading1.M_Loading1
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=False
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Maps/M_Loading1.M_Loading1
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
-GlobalDefaultServerGameMode=None
-
-[/Script/Slate.SlateSettings]
-bExplicitCanvasChildZOrder=True
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
-AppliedDefaultGraphicsPerformance=Scalable
-
-[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-bEnableGooglePlaySupport=True
+bSupportsPortraitOrientation=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -174,3 +48,118 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/Engine.RendererSettings]
+r.MobileHDR=False
+r.Mobile.DisableVertexFog=True
+r.Shadow.CSM.MaxMobileCascades=2
+r.MobileMSAA=1
+r.Mobile.UseLegacyShadingModel=False
+r.Mobile.AllowDitheredLODTransition=False
+r.Mobile.AllowSoftwareOcclusion=False
+r.DiscardUnusedQuality=False
+r.AllowOcclusionQueries=True
+r.MinScreenRadiusForLights=0.030000
+r.MinScreenRadiusForDepthPrepass=0.030000
+r.MinScreenRadiusForCSMDepth=0.010000
+r.PrecomputedVisibilityWarning=False
+r.TextureStreaming=True
+Compat.UseDXT5NormalMaps=False
+r.ClearCoatNormal=False
+r.ReflectionCaptureResolution=128
+r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
+r.ForwardShading=False
+r.VertexFoggingForOpaque=True
+r.AllowStaticLighting=True
+r.NormalMapsForStaticLighting=False
+r.GenerateMeshDistanceFields=False
+r.DistanceFieldBuild.EightBit=False
+r.GenerateLandscapeGIData=False
+r.DistanceFieldBuild.Compress=False
+r.TessellationAdaptivePixelsPerTriangle=48.000000
+r.SeparateTranslucency=False
+r.TranslucentSortPolicy=0
+TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
+r.CustomDepth=1
+r.CustomDepthTemporalAAJitter=True
+r.PostProcessing.PropagateAlpha=0
+r.DOF.Algorithm=True
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
+r.UsePreExposure=False
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.LensFlare=False
+r.TemporalAA.Upsampling=False
+r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.LightUnits=1
+r.DefaultBackBufferPixelFormat=4
+r.Shadow.UnbuiltPreviewInGame=True
+r.StencilForLODDither=False
+r.EarlyZPass=3
+r.EarlyZPassMovable=True
+r.EarlyZPassOnlyMaterialMasking=False
+r.DBuffer=True
+r.ClearSceneMethod=1
+r.BasePassOutputsVelocity=False
+r.SelectiveBasePassOutputs=False
+bDefaultParticleCutouts=False
+fx.GPUSimulationTextureSizeX=1024
+fx.GPUSimulationTextureSizeY=1024
+r.AllowGlobalClipPlane=False
+r.GBufferFormat=1
+r.MorphTarget.Mode=True
+r.GPUCrashDebugging=False
+vr.InstancedStereo=False
+vr.MultiView=False
+vr.MobileMultiView=False
+vr.MobileMultiView.Direct=False
+vr.MonoscopicFarField=False
+vr.RoundRobinOcclusion=False
+vr.ODSCapture=False
+r.WireframeCullThreshold=5.000000
+r.SupportStationarySkylight=True
+r.SupportLowQualityLightmaps=True
+r.SupportPointLightWholeSceneShadows=True
+r.SupportAtmosphericFog=True
+r.SkinCache.CompileShaders=False
+r.Mobile.EnableStaticAndCSMShadowReceivers=True
+r.Mobile.EnableMovableLightCSMShaderCulling=True
+r.Mobile.AllowDistanceFieldShadows=True
+r.Mobile.AllowMovableDirectionalLights=True
+r.MobileNumDynamicPointLights=4
+r.MobileDynamicPointLightsUseStaticBranch=True
+r.SkinCache.SceneMemoryLimitInMB=128.000000
+r.GPUSkin.Limit2BoneInfluences=False
+r.SupportDepthOnlyIndexBuffers=True
+r.SupportReversedIndexBuffers=True
+r.SupportMaterialLayers=False
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/M_Loading.M_Loading
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/M_Loading.M_Loading
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultServerGameMode=None
+
+[/Script/Slate.SlateSettings]
+bExplicitCanvasChildZOrder=True
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
+
+
