--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,8 +142,8 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/Maps/Lake
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.240151
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.759849
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
@@ -166,7 +166,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/Maps/Lake/Lake_30
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -2018,13 +2018,13 @@ BlueprintGraph.TimeStamp=2018.11.23-11.37.28
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2018.11.23-11.40.05
 SequencerWidgets.LastCompileMethod=Unknown
-Voice.TimeStamp=2019.01.04-19.19.06
+Voice.TimeStamp=2019.07.09-10.55.53
 Voice.LastCompileMethod=External
-MovieSceneCapture.TimeStamp=2019.01.04-19.18.50
+MovieSceneCapture.TimeStamp=2019.07.09-10.55.42
 MovieSceneCapture.LastCompileMethod=External
 Advertising.TimeStamp=2018.11.23-11.37.05
 Advertising.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2019.01.04-19.18.43
+HierarchicalLODUtilities.TimeStamp=2019.07.09-10.55.38
 HierarchicalLODUtilities.LastCompileMethod=External
 NullDrv.TimeStamp=2018.11.23-11.39.26
 NullDrv.LastCompileMethod=Unknown
